--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">WorkoutLog</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="profile" />
+    <string name="track" />
+    <string name="plan" />
+    <string name="Track">Track</string>
+    <string name="Profile">Profile</string>
+    <string name="Plan">Plan</string>
 </resources>
